--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -123,7 +123,7 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
-                                <span class="menu-title">Manage Clients & Associates</span>
+                                <span class="menu-title">Manage Permissions</span>
                             </a>
                         </div>
                     </div>
