--- a/views/user/document_hub/firm_index.twig
+++ b/views/user/document_hub/firm_index.twig
@@ -106,7 +106,7 @@
                          style="max-height: 570px;">
                         <div class="fv-row mb-7 fv-plugins-icon-container">
                                     <label class="form-label">Client</label>
-                                    <select class="form-select form-select-solid" aria-label="Client"  name="client_id">
+                                    <select class="js-example-basic-single form-select form-select-solid" aria-label="Client"  name="client_id">
                                         <option selected>Choose Client</option>
                                         {% for client in clients %}
                                             <option value="{{ client.id }}">{{ client.fname }} {{ client.lname }}</option>
@@ -114,15 +114,66 @@
                                     </select>
                             </div>
                         <div class="fv-row mb-7 fv-plugins-icon-container">
-                                <div class="">
-                                    <label class="form-label">Documents</label>
-                                    <select class="js-example-basic-multiple form-select form-select-solid" aria-label="Documents" id="document_id" name="document_id[]" multiple>
-                                        {% for document in documents %}
-                                            <option value="{{ document.id }}">{{ document.file_name }}</option>
-                                        {% endfor %}
-                                    </select>
+                            <div class="row row-cols-1 row-cols-md-2 g-5">
+                                <div class="col">
+                                    <input type="radio" class="btn-check" name="document_type" value="interviews" id="kt_radio_buttons_2_option_1" checked="checked">
+                                    <label class="btn btn-outline btn-outline-dashed btn-outline-default p-7 d-flex align-items-center h-100" for="kt_radio_buttons_2_option_1">
+            <span class="svg-icon svg-icon-3hx svg-icon-primary">
+                <!-- Interview Icon SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers">
+                    <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
+                    <polyline points="2 17 12 22 22 17"></polyline>
+                    <polyline points="2 12 12 17 22 12"></polyline>
+                </svg>
+            </span>
+                                        <span class="d-block fw-bold text-start">
+                <span class="text-dark fw-bolder d-block fs-3">Interviews</span>
+            </span>
+                                    </label>
+                                </div>
+                                <div class="col">
+                                    <input type="radio" class="btn-check" name="document_type" value="resources" id="kt_radio_buttons_2_option_2">
+                                    <label class="btn btn-outline btn-outline-dashed btn-outline-default p-7 d-flex align-items-center h-100" for="kt_radio_buttons_2_option_2">
+            <span class="svg-icon svg-icon-3hx svg-icon-primary">
+                <!-- Resource Icon SVG -->
+                <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                    <polyline points="14 2 14 8 20 8"></polyline>
+                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                    <polyline points="10 9 9 9 8 9"></polyline>
+                </svg>
+            </span>
+                                        <span class="d-block fw-bold text-start">
+                <span class="text-dark fw-bolder d-block fs-3">Resources</span>
+            </span>
+                                    </label>
                                 </div>
                             </div>
+                            </div>
+                        <!-- Interviews Documents -->
+                        <div class="fv-row mb-7 fv-plugins-icon-container" id="interviews_documents">
+                            <div class="">
+                                <label class="form-label">Interviews Documents</label>
+                                <select class="js-example-basic-single1 form-select form-select-solid" aria-label="Documents" id="document_interviews_id" name="document_interviews_id" >
+                                    {% for document in documents %}
+                                        <option value="{{ document.id }}">{{ document.file_name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+
+                        <!-- Resource Documents -->
+                        <div class="fv-row mb-7 fv-plugins-icon-container" id="resources_documents" style="display:none;">
+                            <div class="">
+                                <label class="form-label">Resource Documents</label>
+                                <select class="js-example-basic-multiple form-select form-select-solid" aria-label="Documents" id="document_id" name="document_id[]" multiple>
+                                    {% for document in documents %}
+                                        <option value="{{ document.id }}">{{ document.file_name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
                         <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Description</label>
                                 <textarea class="form-control form-control-solid" id="firm_des" name="firm_des" placeholder="Description"></textarea>
@@ -158,8 +209,28 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
+        document.querySelectorAll('input[name="document_type"]').forEach((radio) => {
+            radio.addEventListener('change', function() {
+                if (this.value === 'interviews') {
+                    document.getElementById('interviews_documents').style.display = 'block';
+                    document.getElementById('resources_documents').style.display = 'none';
+                } else if (this.value === 'resources') {
+                    document.getElementById('interviews_documents').style.display = 'none';
+                    document.getElementById('resources_documents').style.display = 'block';
+                }
+            });
+        });
+    </script>
+    <script>
+
         $(document).ready(function() {
             $('.js-example-basic-multiple').select2({
+                dropdownParent: $('#editExampleModal')
+            });
+            $('.js-example-basic-single1').select2({
+                dropdownParent: $('#editExampleModal')
+            });
+            $('.js-example-basic-single').select2({
                 dropdownParent: $('#editExampleModal')
             });
         });
