--- a/views/user/plans/index.twig
+++ b/views/user/plans/index.twig
@@ -94,7 +94,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="w-100 mb-10">
+                                                    <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll"
+                                                         data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}"
+                                                         data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
+                                                         data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
+                                                         style="max-height: 570px;">
                                                     {% for key_point in plan.key_points_titles %}
+                                                        <div class="fv-row fv-plugins-icon-container">
                                                         <div class="d-flex align-items-center mb-5">
                                                             <span class="fw-bold fs-6 text-gray-800 flex-grow-1 pe-3">{{ key_point }}</span>
                                                             <span class="svg-icon svg-icon-1 svg-icon-success">
@@ -104,9 +110,18 @@
                                 </svg>
                             </span>
                                                         </div>
+                                                        </div>
                                                     {% endfor %}
+
                                                 </div>
-                                                <a role="button" class="btn btn-sm btn-primary" onclick="redirectToDetailPage('{{ plan.slug }}')">Select</a>
+                                                </div>
+                                                {% if planId ==  plan.id and CurrentDate <= planEndDate %}
+                                                <a role="button" class="btn btn-sm btn-success" disabled="">Active Till {{ formattedDate }}</a>
+                                                {% elseif planId != '' and CurrentDate <= planEndDate %}
+                                                    <a role="button" class="btn btn-sm btn-secondary" disabled="">Select</a>
+                                                {% else %}
+                                                    <a role="button" class="btn btn-sm btn-primary" onclick="redirectToDetailPage('{{ plan.slug }}')">Select</a>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
