--- a/views/user/invoice/list.twig
+++ b/views/user/invoice/list.twig
@@ -155,7 +155,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script>
-        var stripe = Stripe('{{ Stripe_public_key }}');
+        var stripe = Stripe('{{ Firm_Stripe_public_key }}');
         var elements = stripe.elements();
         var style = {
             base: {
