--- a/views/user/invoice/view_invoice_email.twig
+++ b/views/user/invoice/view_invoice_email.twig
@@ -343,7 +343,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 <script src="https://js.stripe.com/v3/"></script>
 <script>
-    var stripe = Stripe('{{ Stripe_public_key }}');
+    var stripe = Stripe('{{ Firm_Stripe_public_key }}');
     var elements = stripe.elements();
     var style = {
         base: {
